--- a/app/scss/global/_querise.scss
+++ b/app/scss/global/_querise.scss
@@ -15,6 +15,12 @@
 }
 @media (min-width: 922px) {
   .container {
-    width: 1000px;
+    width: 850px;
   }   
+}
+
+@media (max-width: 799px) and (min-width: 768px) {
+  .container {
+    width: 700px;
+  }
 }
