--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -3,4 +3,6 @@
 @import "./global/resets";
 @import "./utils/vars";
 @import "./utils/mixin";
-@import "./page/e-commerce-product";
+// PAGE
+@import "./page/header";
+@import "./page/content";
