--- a/app/scss/global/_globlas.scss
+++ b/app/scss/global/_globlas.scss
@@ -15,10 +15,13 @@ body {
   font-family: 'Kumbh Sans', sans-serif;
   min-height: 100vh;
   padding: 0;
+  overflow-x: hidden;
   margin: 0;
 }
 
 .container {
   margin-left: auto;
   margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
 }
